Fix colorpicker not hiding on collapsing toolspane

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -17,6 +17,7 @@ body {
 	position: relative;
 	margin: 0;
 	padding: 0;
+	overflow-y: scroll;
 }
 
 .overlay-spinner {
